--- a/style.css
+++ b/style.css
@@ -30,13 +30,123 @@ body {
 }
 
 @media screen and (min-width: 500px) {
+      .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+      }
+
       form {
             display: flex;
-            outline: 1px solid red;
+            padding: 1rem;
+            background-color: white;
+            border-radius: 1rem;
+            /* outline: 1px solid red; */
+      }
+
+      #side-image-mobile {
+            display: none;
       }
 
       .container__side-bar {
-            outline: 1px solid red;
+            /* outline: 1px solid red; */
+            background-image: url(./assets/images/bg-sidebar-desktop.svg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            padding: 2rem;
+            height: 40rem;
+            width: 17rem;
+            border-radius: 1rem;
+            display: block;
+            min-width: 14rem;
+      }
+
+
+      .container__side-bar__item {
+            display: flex;
+            /* outline: 1px solid red; */
+            padding: 1rem 0;
+      }
+
+      .container__side-bar__item__details__step-no {
+            text-transform: uppercase;
+            color: var(--LightBlue);
+      }
+
+      .container__side-bar__item__details__step-details {
+            text-transform: uppercase;
+            color: white;
+            font-weight: 500;
+      }
+
+      .container__steps {
+            margin-left: 4rem;
+            /* outline: 1px solid red; */
+            position: relative;
+            /* min-width: 35rem */
+      }
+
+      .container__steps__buttons {
+            width: 100%;
+            /* outline: 1px solid red; */
+            padding: 0 2rem 0rem 2rem;
+            position: absolute;
+            bottom: 16px;
+            display: flex;
+            justify-content: space-between;
+      }
+
+      .container__steps__step-item__plans {
+            /* outline: 1px solid red; */
+            display: flex;
+            justify-content: space-between;
+            gap: 1rem;
+      }
+
+      .container__steps__step2__plans {
+            min-width: 9rem;
+            min-height: 10rem;
+            /* display: flex; */
+            /* flex-direction: row; */
+            /* gap: 1rem; */
+            /* justify-content: space-between; */
+      }
+
+      .container__steps__step2__plans__details {
+            margin-top: 3rem;
+      }
+
+      .step5-thanks-text {
+            max-width: 30rem;
+      }
+}
+
+@media screen and (max-width: 500px) {
+      .mobile-only {
+            display: none;
+      }
+
+      .container__side-bar {
+            display: flex;
+            justify-content: center;
+            padding: 2rem 0;
+      }
+
+      .container__steps__buttons {
+            /* outline: 1px solid red; */
+            padding: 1rem 1rem;
+            background-color: white;
+            position: absolute;
+            bottom: 0%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+      }
+
+      .container__steps__step2__plans {
+            display: flex;
+            gap: 1rem;
       }
 }
 
@@ -80,15 +190,15 @@ label {
       width: 100%;
 }
 
-.container__side-bar {
+/* .container__side-bar {
       display: flex;
       justify-content: center;
       padding: 2rem 0;
-}
+} */
 
 .container__side-bar__item__count {
       margin: 0 0.5rem;
-      padding: 0.5rem 0.75rem;
+      padding: 0.5rem 0.85rem;
       outline: White 1px solid;
       color: white;
       border-radius: 50%;
@@ -107,17 +217,6 @@ label {
       margin: 0 1rem;
       padding: 1rem 1rem 2rem 1rem;
       border-radius: 0.75rem;
-}
-
-.container__steps__buttons {
-      /* outline: 1px solid red; */
-      padding: 1rem 1rem;
-      background-color: white;
-      position: absolute;
-      bottom: 0%;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
 }
 
 .container__steps__buttons.one-button {
@@ -142,8 +241,8 @@ button {
 }
 
 .container__steps__step2__plans {
-      display: flex;
-      gap: 1rem;
+      /* display: flex; */
+      /* gap: 1rem; */
       outline: 1px solid var(--CoolGray);
       margin: 1rem 0;
       padding: 1rem 1rem;
@@ -385,4 +484,10 @@ input:checked+.slider:before {
 
 .input-error {
       border: 1px solid red;
+}
+
+.container__steps__step-item__step4__plan__total__cost {
+      color: var(--PurplishBlue);
+      font-size: 1.2rem;
+      font-weight: 500;
 }
